<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/data_fragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="396dp"
        android:layout_height="40dp"
        android:layout_above="@+id/spinner3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="0"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_0"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="16dp"
        android:text="@string/calculator_0"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_decimal_point"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_0"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/calculator_decimal_point"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/calculator_7"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/calculator_8"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_9"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_8"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/calculator_9"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/calculator_4"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/calculator_5"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_5"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/calculator_6"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/calculator_1"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_0"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/calculator_2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/calculator_3"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="187dp"
        android:layout_height="38dp"
        android:layout_above="@+id/button_8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="60dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="187dp"
        android:layout_height="38dp"
        android:layout_above="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="396dp"
        android:layout_height="40dp"
        android:layout_above="@+id/spinner2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="0"
        android:textSize="36sp" />


</RelativeLayout>
